Fix highlight controls on mobile click

--- a/src/components/Controls/Controls.scss
+++ b/src/components/Controls/Controls.scss
@@ -19,6 +19,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      -webkit-tap-highlight-color: transparent;
 
       &:first-child {
         border-bottom-left-radius: 35% 50%;
